--- a/style.css
+++ b/style.css
@@ -72,6 +72,11 @@ body{
 .filters span.active{
   color: #3C87FF;
 }
+.icon-svg{
+  width: 32px;
+  height: 32px;
+  left: 20px;
+}
 .controls .clear-btn{
   border: none;
   opacity: 0.6;
